--- a/style/links.css
+++ b/style/links.css
@@ -1,15 +1,16 @@
 html {
-    background-color: white;
+    background-color: black;
 }
 body {
-    width: 1000px;
+    width: 1200px;
+    height: 2000px;
     background-color: #d4af37;
     margin: auto auto;
 }
 
 .wrapper {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(3, 1fr);
     gap: 10px;
     grid-auto-rows: minmax(10px, auto);
     text-align: center;
@@ -37,7 +38,7 @@ h1 {
     padding-right: 20px;
     box-shadow: 0px 5px black;
     border-radius: 3px;
-    background-color: yellow;
+    background-color: #ffd23f;
     margin-right: 10px;
     transition: all .5s;
 }
