--- a/style/vrielle.css
+++ b/style/vrielle.css
@@ -1,3 +1,10 @@
+:root {
+    --header-back-color: #f4e4fc;
+    --header-hover-back-color: #dec6ea;
+    --header-border-color: #8c8a8d;
+    --header-fore-color: #000000;
+}
+
 html * {
     font-family: 'Mali', cursive;
 }
@@ -5,7 +12,6 @@ html * {
 body {
     background-image: url("../images/mainwebpagebackground.png");
     background-repeat: no-repeat;
-    font-size: 20px;
 }
 
 h1 {
@@ -31,9 +37,9 @@ h4 {
     text-align: left;
 }
 
-li {
-    font-size: 20px;
-    margin-left: 30px;
+p {
+    font-size: 28px;
+    margin-left: 50px;
 }
 
 .button {
@@ -61,9 +67,22 @@ li {
     width: 70%;
     height: auto;
     margin: 0 auto;
+    margin-right: 15px;
 }
 
 .img2 {
+    display: block;
+    width: 55.5%;
+    height: auto;
+    margin: 0 auto;
+    margin-left: 15px;
+}
+
+.sign {
+    margin-left: 830px;
+}
+
+.img3 {
     display: block;
     width: 15%;
     height: auto;
